# smartattendance-be

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  PATROL_API_DOCUMENTATION.md  PROFILE_API_DOCUMENTATION.md  SHIFT_API_DOCUMENTATION.md  create_patrol_table.surql  create_shift_table.surql  fix_existing_employees.surql  insert_sample_shifts.surql  query_test.rs  query_test2.rs  test_fcm_notification.sh  test_query.rs  update_pass.rs
config/: .gitkeep
scratch/: test_conn.rs
src/: main.rs
src/config/: app_state.rs
src/handlers/: admin_handler.rs  attendance_handler.rs  auth_handler.rs  dashboard_handler.rs  employee_handler.rs  group_handler.rs  health_handler.rs  leave_handler.rs  location_handler.rs  maintenance_handler.rs  mod.rs  patrol_handler.rs  profile_handler.rs  shift_handler.rs  shift_management_handler.rs  wifi_handler.rs
src/middleware/: auth.rs
src/models/: admin.rs  attendance.rs  dashboard.rs  employee.rs  group.rs  leave.rs  mod.rs  patrol.rs  shift.rs  shift_management.rs
src/routes/: api.rs
src/services/: fcm_service.rs  mod.rs
src/utils/: jwt.rs
src/view_models/: admin_vm.rs  attendance_vm.rs  auth_vm.rs  dashboard_vm.rs  employee_vm.rs  group_vm.rs  leave_vm.rs  mod.rs  patrol_vm.rs  shift_management_vm.rs  shift_vm.rs
