[package]
name = "smartattendance_be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = "2.1.4"
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
bcrypt = "0.15"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
yup-oauth2 = "12.1.2"
