[package]
name = "smartattendance_be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
actix-multipart = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.1.4", features = ["protocol-http", "protocol-ws", "rustls"] }
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
bcrypt = "0.15"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["json"] }
yup-oauth2 = "12.1.2"
rustls = { version = "0.23.39", features = ["ring"] }
futures-util = "0.3"
uuid = { version = "1.7", features = ["v4"] }
jsonwebtoken = "9.2"
actix-web-httpauth = "0.8"
